# aemet

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
aemet/: __init__.py  client.py  observations.py  service.py
aemet/predictions/: beach.py  diccionario24.csv  mountain.py  municipality.py  municipality_codes.py  nivology.py  predictions.py  uvi.py
src/aemet/: __init__.py  base.py
src/aemet/predictions/: mixins.py  mountain.py  municipality.py  predictions.py  uvi.py
src/aemet/predictions/data/: Playas_codigos.csv
tests/spec/: observations_spec.py
