[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aemet"
version = "0.1.0"
description = "Library for aemet api requests"
dependencies = [
    "requests",
    "rapidfuzz",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]